# itpp

./: .gitignore  Cargo.toml  README.md
crates/itpp-cli/src/: measure.rs
crates/itpp-codec/src/: baseline.rs  ledger.rs  lib.rs  range.rs
crates/itpp-core/src/: edit.rs
crates/itpp-format/src/: io.rs
crates/itpp-ingest/src/: fasta.rs  gfa.rs  lib.rs
data/manifests/: mhc.tsv
database/: mhc-c4.itpp
database/annotations/: c4-clinvar.json
docs/: design.md  literature.md
experiments/EXP-0001-mhc-mvp/: README.md  mhc.gfa  run.sh
gui/: Cargo.toml  README.md  build.sh  genome-browser.html  template.html  tiled-browser.html
gui/src/: browser.rs  codon.rs  lib.rs
gui/tests/: smoke.mjs
gui/tiles/mhc-c4/: manifest.json
gui/tiles/mhc-c4/L0/: 0.json
gui/tiles/mhc-c4/L1/: 0.json  1.json
gui/tiles/mhc-c4/L2/: 0.json  1.json  2.json  3.json
gui/tiles/mhc-c4/L3/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json
gui/tiles/mhc-c4/L4/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
gui/tiles/mhc-c4/L5/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  4.json  5.json  6.json  7.json  8.json  9.json
pipelines/: 01_fetch_mhc.sh  02_extract_subgraph.sh  03_annotate.sh  04_build_mhc.sh  05_fetch_annotations.sh
results/metrics/: chr6-pangenome.md  ledger.jsonl
scripts/: setup-env.sh  test.sh
source/crates/itpp-cli/: Cargo.toml
source/crates/itpp-cli/src/: main.rs
source/crates/itpp-codec/: Cargo.toml
source/crates/itpp-codec/src/: model.rs
source/crates/itpp-core/: Cargo.toml
source/crates/itpp-core/src/: lib.rs  seq.rs
source/crates/itpp-format/: Cargo.toml
source/crates/itpp-format/src/: lib.rs
source/crates/itpp-ingest/: Cargo.toml
source/crates/itpp-ingest/src/: gfa.rs  synth.rs
spec/: itpp-format-v0.md
