[workspace]
resolver = "2"
members = [
    "source/crates/itpp-core",
    "source/crates/itpp-codec",
    "source/crates/itpp-format",
    "source/crates/itpp-ingest",
    "source/crates/itpp-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stuartinglis/itpp"
description = "Information-Theoretic Pangenomic Project: a two-part-code pangenome format + measurement harness"

[workspace.dependencies]
itpp-core = { path = "source/crates/itpp-core" }
itpp-codec = { path = "source/crates/itpp-codec" }
itpp-format = { path = "source/crates/itpp-format" }
itpp-ingest = { path = "source/crates/itpp-ingest" }

[profile.release]
lto = "thin"
codegen-units = 1
