[package]
name = "itpp-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Entropy coders (range coder + adaptive order-k context model), delta/walk coders, and the description-length ledger."

[dependencies]
itpp-core.workspace = true

[lints.clippy]
all = "warn"
