[package]
name = "itpp-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reference implementation of the ITPP container format (chunked, indexed, versioned, lossless)."

[dependencies]
itpp-core.workspace = true
itpp-codec.workspace = true

[lints.clippy]
all = "warn"
