[package]
name = "itpp-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Importers for GFA, FASTA and producer annotations; synthetic pangenome fixture generator."

[dependencies]
itpp-core.workspace = true

[lints.clippy]
all = "warn"
